###############################################################################
# Bazel now uses Bzlmod by default to manage third_party dependencies.
# Please consider migrating your third_party dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################
