cc_test(
  name = "test_all",
  size = "small",
  srcs = glob(["*.cpp"]),
  deps = ["@com_google_googletest//:gtest_main",
          "//:probabilistic_model",
          "@random_events//:random_events_lib"],
  linkopts = ["-l /usr/lib/x86_64-linux-gnu/libtcmalloc.so.4", "-l /usr/lib/x86_64-linux-gnu/libprofiler.so.0"],
)